--- a/writing/cogsci2018/cogsci2018.tex
+++ b/writing/cogsci2018/cogsci2018.tex
@@ -81,13 +81,12 @@ active learning; social reasoning; information gain; OED;
 self-presentation; goal tradeoffs
 \end{abstract}
 
-\hypertarget{introduction}{%
-\section{Introduction}\label{introduction}}
+\section{Introduction}\label{introduction}
 
 Imagine you are a novice cook and have to decide what meal to prepare
 for a first date. Should you choose an easy favorite or attempt a new
 dish? The familiar recipe can ensure a good meal, but the new recipe
-could be even more delicions, although it has a higher chance of
+could be even more delicious, although it has a higher chance of
 failure. In this type of \emph{explore-exploit} dilemma (Sutton \&
 Barto, 1998), you can either \emph{explore} the new recipe that might
 result in a more delicious dish (\emph{learning} goal), or
@@ -108,18 +107,17 @@ people do not have control over the flow of information.
 
 Real-world learning, however, usually takes place in rich social
 contexts with teachers, peers, or others who can directly influence our
-learning. Indeed, adults and even preschool-aged children modulate their
-inferences depending on how others (e.g., teachers) select their actions
-(Shafto, Goodman, \& Frank, 2012), and understand that socially
-communicated information licenses different inferences than information
-generated on their own (e.g., Xu \& Tenenbaum, 2007). But even when we
-learn from \emph{our} own actions instead of others', our social
-environment may affect our self-directed learning process. While
-previous models have captured how we optimize learning, either from our
-own actions or from others, they have been agnostic to other social
-factors that are ubiquitous in a learner's environment. People must
-integrate the value of social goals (e.g., looking competent or
-knowledgeable) and informational goals when deciding what to do.
+learning. Indeed, adults and children modulate their inferences
+depending on how others (e.g., teachers) select their actions (Shafto,
+Goodman, \& Frank, 2012), and understand that socially communicated
+information licenses different inferences than information generated on
+their own (e.g., Xu \& Tenenbaum, 2007). But even when we learn from
+\emph{our} own actions, our social environment may affect our
+self-directed learning process. While previous models have captured how
+we optimize learning, either from our own actions or from others, they
+have been agnostic to other social factors that are ubiquitous in a
+learner's environment. People must integrate the value of social goals
+and informational goals when deciding what to do.
 
 How can active learning models accommodate this richer set of utilities?
 As a step towards answering this question, we model a learner who
@@ -162,15 +160,15 @@ how people choose actions that support learning vs.~performance goals in
 different social contexts. We present a toy with an ambiguous causal
 mechanism (Fig.~\ref{fig:toy}). For this toy, doing only one of the two
 possible actions (handle pull or button press) disambiguates its causal
-mechanism but potentially risks no immediate effect (i.e., neither sound
-nor light turning on), while doing both actions at the same time is
-immediately rewarding (both music and light on) but is not informative
-for learning the toy's causal mechanism. Thus, the learner can pick an
-action that leads to a new discovery (exploration; learning) or an
-immediate reward (exploitation; performance). The learner's decision
-depends on the relative utilities he assigns to learning versus
-performance, which in turn are shaped by the social context (e.g., the
-presence or absence of his
+mechanism but potentially risks no immediate effect (neither sound nor
+light turning on), while doing both actions simultaneously is
+immediately rewarding (music and light on) but is not informative for
+learning the toy's causal mechanism. Thus, the learner can pick an
+action that leads to a discovery (exploration; learning) or an immediate
+reward (exploitation; performance). The learner's decision depends on
+the relative utilities he assigns to learning versus performance, which
+in turn are shaped by the social context (e.g., the presence or absence
+of his
 boss).\footnote{From here on, we use a male pronoun for Bob, the learner, and female pronoun for Ann, the boss and observer.}
 
 In two experiments, we show that emphasizing performance or
@@ -181,8 +179,7 @@ performance/presentation actions even when a learning goal is emphasized
 (Exp.~2). Finally, we show that the empirical results are consistent
 with predictions of our cognitive model of social-active learning.
 
-\hypertarget{computational-model}{%
-\section{Computational model}\label{computational-model}}
+\section{Computational model}\label{computational-model}
 
 We model a learner \(L\) who chooses his action \(a\) approximately
 optimally (as per optimality parameter \(\lambda\)) with respect to his
@@ -190,40 +187,39 @@ goal based on the expected total utility \(U_{t}\) given his action and
 presence of an observer \(o\):
 
 \[ P_L(a | o) \propto \exp(\lambda \cdot \mathbb{E}[U_{t}(a,o)]).\]
-\noindent The total utility is defined as:
+\noindent
+The total utility is defined as:
 \[U_{t}(a,o) = \phi_{learn} \cdot U_{learn}(a) + \phi_{perf} \cdot U_{perf}(a) + \delta^o \cdot \phi_{pres} \cdot U_{pres}(a),\]
-\noindent where \(\phi\)s are weights that are inferred for each utility
-from data and \(\delta^o\) is a Dirac delta function that is 1 if there
-is an observer, and 0 if there is no observer. Below we describe the
-structure of each utility (see Fig.~\ref{fig:model_diagram} for the
-model schematic).
+\noindent
+where \(\phi\)s are weights that are inferred for each utility from data
+and \(\delta^o\) is a Dirac delta function that is 1 if there is an
+observer, and 0 if there is no observer. Below we describe the structure
+of each utility (see Fig.~\ref{fig:model_diagram} for the model
+schematic).
 
-\hypertarget{learning-utility}{%
-\subsubsection{Learning utility}\label{learning-utility}}
+\subsubsection{Learning utility}\label{learning-utility}
 
 The \emph{learning utility} captures the goal to learn new information,
-which in our paradigm is associated with figuring out how a given toy
-works. The learning utility (\(U_{learn}\)) in our model is derived from
-Optimal Experiment Design models (OED; Nelson, 2005), which quantify the
-expected utility of different information seeking actions. The learner
-is uncertain about the mechanism of toy \(t\) and wants to decrease his
-uncertainty by taking an action. This decrease is captured by
-\emph{information gain}, the change in the learner's entropy
-(uncertainty) before and after seeing an outcome of the action. To
-maximize information gain, the learner sums the information gain due to
+specifically how a given toy works in our paradigm. The learning utility
+(\(U_{learn}\)) in our model is derived from Optimal Experiment Design
+models (OED; Nelson, 2005), which quantify the expected utility of
+information seeking actions. The learner is uncertain about the
+mechanism of toy \(t\) and wants to decrease his uncertainty by taking
+an action. \emph{Information gain} captures the change in the learner's
+entropy (uncertainty) before and after seeing an outcome of the action.
+To maximize information gain, the learner sums the information gain from
 each outcome \(m\) in the set of possible outcomes \(M\) (e.g., music
-playing), weighted by the probability of that outcome given the action.
-Thus,
+on), weighted by the probability of that outcome given the action. Thus,
 \[ U_{learn}(a) \propto \sum_{m \in M}{P(m|a)}[{H(t) - H(t | m,a)}],\]
-\noindent where \(H(t)\) is the Shannon entropy of the learner's guess
-about the toy (MacKay, 2003). Once the learner chooses an action and
-observes an outcome, he updates his beliefs about each hypothesis via
-standard Bayesian updating. Finally, we scale the utility by \(log_2n\),
-where \(n\) is the number of possible actions, to convert the utility to
-a value between 0 and 1.
+\noindent
+where \(H(t)\) is the Shannon entropy of the learner's guess about the
+toy (MacKay, 2003). Once the learner chooses an action and observes an
+outcome, he updates his beliefs about each hypothesis via standard
+Bayesian updating. Finally, we scale the utility by \(log_2n\), where
+\(n\) is the number of possible actions, to convert the utility to a
+value between 0 and 1.
 
-\hypertarget{performance-utility}{%
-\subsubsection{Performance utility}\label{performance-utility}}
+\subsubsection{Performance utility}\label{performance-utility}
 
 The \emph{performance utility} is the utility of achieving an immediate
 reward outcome. Within our paradigm, the learner gains utility from an
@@ -232,8 +228,7 @@ utility (\(U_{perf}\)) before the learner chooses an action is the
 likelihood of an effect \(m\) given the action \(a\):
 \[ U_{perf}(a) = P_L(m | a).\] \noindent
 
-\hypertarget{presentation-utility}{%
-\subsubsection{Presentation utility}\label{presentation-utility}}
+\subsubsection{Presentation utility}\label{presentation-utility}
 
 When there is another person present to observe the learner's action,
 the observer \(O\) is expected to reason about the learner \(L\)'s
@@ -241,15 +236,14 @@ competence, equal to whether the learner was able to make the toy
 produce an effect. The learner thinks about the observer's inferential
 process, and the expected \emph{presentation utility} (\(U_{pres}\)) is
 based on maximizing the apparent competence inferred by the observer:
-\[ U_{pres}(a) = P_O(m | a),\] \noindent where \(P_O(m | a)\) is the
-observer's own estimate of the likelihood of an effect given the
-learner's action.\footnote{We assume that the observer is naive about
-  the toy's causal structure; if the observer is knowledgeable,
-  \(U_{perf}\) and \(U_{pres}\) will diverge, which is an important
-  consideration for future work.}
+\[ U_{pres}(a) = P_O(m | a),\] \noindent
+where \(P_O(m | a)\) is the observer's own estimate of the likelihood of
+an effect given the learner's action.\footnote{We assume that the
+  observer is naive about the toy's causal structure; if the observer is
+  knowledgeable, \(U_{perf}\) and \(U_{pres}\) will diverge, which is an
+  important consideration for future work.}
 
-\hypertarget{experiment-1}{%
-\section{Experiment 1}\label{experiment-1}}
+\section{Experiment 1}\label{experiment-1}
 
 In Exp.~1, we first wanted to confirm that participants would choose
 different actions depending on what goal was highlighted. We were also
@@ -264,11 +258,9 @@ following order of goal conditions (decreasing): Learning, No-goal,
 Performance, and
 Presentation.\footnote{Our hypothesis, method, model and data analysis were pre-registered prior to data collection at \url{https://osf.io/kcjau}.}
 
-\hypertarget{method}{%
-\subsection{Method}\label{method}}
+\subsection{Method}\label{method}
 
-\hypertarget{participants}{%
-\subsubsection{Participants}\label{participants}}
+\subsubsection{Participants}\label{participants}
 
 We recruited 196 participants (45-51 per condition) on Amazon's
 Mechanical Turk, with IP addresses in the US and a task approval rate
@@ -277,29 +269,15 @@ out of three manipulation check questions correctly (see Procedure
 section for details on the manipulation check), and thus the remaining
 189 participants were included in our final analysis.
 
-\hypertarget{stimuli-and-design}{%
-\subsubsection{Stimuli and Design}\label{stimuli-and-design}}
+\subsubsection{Stimuli and Design}\label{stimuli-and-design}
 
-We presented instructions for 3 toys that looked very similar but worked
-in different ways in a deterministic world (see captions for
-Fig.~\ref{fig:model_diagram}). The instructions conveyed that
-simultaneously pressing the button and pulling the handle was
-immediately rewarding but uninformative (fails to disambiguate the
-causal mechanism). In contrast, either of the single actions was
-completely disambiguating, but was uncertain to produce an immediate
-outcome. The front of each toy labeled the correct action(s)--outcome
-link.
-
-\begin{CodeChunk}
-\begin{figure}[H]
-
-{\centering \includegraphics[width=0.86\linewidth]{figs/e1_behav_results_plot-1} 
-
-}
-
-\caption[Behavioral results for Exp]{Behavioral results for Exp. 1. A: Proportion of action decisions for each condition. Error bars are 95\% binomial CIs based on a Bayesian beta-binomial model. Dashed line represents chance level (66.7\%; two single actions out of three action choices). B: Distribution of response times on the action decisions. C: Distribution of participants' belief change (information gain in bits) by condition. Higher values represent more information gained from the action selection.}\label{fig:e1_behav_results_plot}
-\end{figure}
-\end{CodeChunk}
+We presented instructions for 3 similar-looking toys that work in
+different ways in a deterministic manner (see captions for
+Fig.~\ref{fig:model_diagram}). The instructions conveyed that pressing
+both the button and pulling the handle was immediately rewarding but
+uninformative. In contrast, either of the single actions was completely
+disambiguating, but was uncertain to produce an immediate outcome. The
+front of each toy labeled its action(s)--outcome link.
 
 We asked participants to act on one of these toys; importantly, the
 given toy was missing its label, leading to uncertainty about its causal
@@ -316,8 +294,18 @@ action out of the following set: ``press the button'', ``pull the
 handle'', or ``press the button and pull the handle.'' The order of
 actions was randomized.
 
-\hypertarget{procedure}{%
-\subsubsection{Procedure}\label{procedure}}
+\begin{CodeChunk}
+\begin{figure}[H]
+
+{\centering \includegraphics[width=0.94\linewidth]{figs/e1_behav_results_plot-1} 
+
+}
+
+\caption[Behavioral results for Exp]{Behavioral results for Exp. 1. A: Proportion of action decisions for each condition. Error bars are 95\% binomial CIs based on a Bayesian beta-binomial model. B: Distribution of response times on the action decisions. C: Distribution of participants' belief change (information gain in bits) by condition. Higher values represent more information gained from the action selection.}\label{fig:e1_behav_results_plot}
+\end{figure}
+\end{CodeChunk}
+
+\subsubsection{Procedure}\label{procedure}
 
 In the \emph{exposure phase}, we showed participants an example toy and
 gave instructions for three toy types. We first presented the
@@ -340,11 +328,9 @@ or 3, which indexed participants' prior beliefs about how the toys were
 likely to function and their \emph{belief change} after selecting an
 action and observing its effect.
 
-\hypertarget{results-and-discussion}{%
-\subsection{Results and discussion}\label{results-and-discussion}}
+\subsection{Results and discussion}\label{results-and-discussion}
 
-\hypertarget{action-decisions}{%
-\subsubsection{Action decisions:}\label{action-decisions}}
+\subsubsection{Action decisions:}\label{action-decisions}
 
 We modeled action decisions (informative ``single'' vs.~rewarding
 ``both'' action) using a logistic regression
@@ -369,8 +355,7 @@ difference condition falling well outside the 95\% HDI, and at similar
 rate in the Performance condition (\(\beta\) = -0.65, {[}-1.04,
 -0.27{]}) with the 95\% HDI including the null.
 
-\hypertarget{action-decision-times}{%
-\subsubsection{Action decision times:}\label{action-decision-times}}
+\subsubsection{Action decision times:}\label{action-decision-times}
 
 As an exploratory measure, we analyzed decision times, or the latency to
 make an action selection as measured from the start of the action
@@ -384,8 +369,7 @@ similar decision times. These findings suggest that reaching a decision
 in the Learning condition was cognitively more effortful than the other
 conditions.
 
-\hypertarget{belief-change}{%
-\subsubsection{Belief change:}\label{belief-change}}
+\subsubsection{Belief change:}\label{belief-change}
 
 We quantified participants' change in beliefs about the toy using
 information gain. We computed the Kullback-Leibler (KL) divergence both
@@ -413,8 +397,7 @@ between goal and action selection. However, a larger proportion of
 participants selected a single action in the Learning context, so
 learning was more likely in this condition.
 
-\hypertarget{experiment-2}{%
-\section{Experiment 2}\label{experiment-2}}
+\section{Experiment 2}\label{experiment-2}
 
 In Exp.~1, we confirmed that participants selected different actions
 depending on the type of goal emphasized. In Exp.~2, our goals were
@@ -429,18 +412,15 @@ conditions when their boss was present. We also predicted a null result:
 that the presence of the boss should not affect action decisions in the
 Performance condition.
 
-\hypertarget{method-1}{%
-\subsection{Method}\label{method-1}}
+\subsection{Method}\label{method-1}
 
-\hypertarget{participants-1}{%
-\subsubsection{Participants}\label{participants-1}}
+\subsubsection{Participants}\label{participants-1}
 
 Using the same recruitment and exclusion criteria as Exp.~1, we
 recruited 347 participants (42-51 per condition), and included 325
 participants in our final analysis.
 
-\hypertarget{stimuli-and-design-1}{%
-\subsubsection{Stimuli and Design}\label{stimuli-and-design-1}}
+\subsubsection{Stimuli and Design}\label{stimuli-and-design-1}
 
 The stimuli and design were identical to Exp.~1, except we had 7
 different goal \(\times\) social conditions. Goals were identical to
@@ -453,16 +433,13 @@ conditions were: \emph{Social-learning}, \emph{Social-performance},
 \emph{No-social-presentation} condition, because the presentation goal
 was defined by presenting oneself as competent to another person.
 
-\hypertarget{procedure-1}{%
-\subsubsection{Procedure}\label{procedure-1}}
+\subsubsection{Procedure}\label{procedure-1}
 
 The procedure was identical to Exp.~1.
 
-\hypertarget{results-and-discussion-1}{%
-\subsection{Results and discussion}\label{results-and-discussion-1}}
+\subsection{Results and discussion}\label{results-and-discussion-1}
 
-\hypertarget{action-decisions-1}{%
-\subsubsection{Action decisions:}\label{action-decisions-1}}
+\subsubsection{Action decisions:}\label{action-decisions-1}
 
 We modeled action decisions using a logistic regression specified as
 \texttt{$action \sim goal\_condition * social\_context$} with the
@@ -478,8 +455,7 @@ such that the effect of social context was present in the Learning and
 No-goal conditions, but not in the Performance condition (\(\beta\)
 \(_{perf-social-int}\) = 1.148, {[}0.049, 2.296{]}).
 
-\hypertarget{action-decision-times-1}{%
-\subsubsection{Action decision times:}\label{action-decision-times-1}}
+\subsubsection{Action decision times:}\label{action-decision-times-1}
 
 We replicated the key decision time finding from Exp.~1: Participants
 made slower decisions in the Learning context than in
@@ -494,8 +470,7 @@ context. Note that here we did not see a difference in decision times
 between the Learning and No-goal conditions, which is different from the
 pattern in Exp.~1.
 
-\hypertarget{belief-change-1}{%
-\subsubsection{Belief change:}\label{belief-change-1}}
+\subsubsection{Belief change:}\label{belief-change-1}
 
 We replicated the information gain effect from Exp.~1: Participants who
 selected a single action showed greater information gain across all
@@ -506,8 +481,7 @@ Exp.~1, more participants selected the single action in the Learning
 condition, especially in the No-social context, meaning information gain
 was most likely in this learning context.
 
-\hypertarget{bda-model-data-fit}{%
-\subsubsection{BDA model-data fit:}\label{bda-model-data-fit}}
+\subsubsection{BDA model-data fit:}\label{bda-model-data-fit}
 
 In our paradigm, participants chose an action based on a certain
 goal.\footnote{For action priors, we used a separate task in which people indicated the likelihood for selecting an action without any information about possible hypotheses or goals. We used the mean likelihood for each action choice as baseline priors in our model.}
@@ -525,17 +499,6 @@ No-social learning condition, whereas \(\phi_{perf}\) and
 \(\phi_{pres}\) together made up the highest portion in the Presentation
 condition, with high social pressure to appear competent.
 
-\begin{CodeChunk}
-\begin{figure}[H]
-
-{\centering \includegraphics[width=0.95\linewidth]{figs/e2_results-1} 
-
-}
-
-\caption[Behavioral and model results for Exp]{Behavioral and model results for Exp. 2. A: Action decisions from human data (top) and fitted model predictions (bottom). Color represents social context. B and C: Decision times and belief change respectively, collapsing across social contexts. D: Inferred phi values for each condition. All other plotting conventions are the same as Fig. 3.}\label{fig:e2_results}
-\end{figure}
-\end{CodeChunk}
-
 We also inferred another parameter of the cognitive model, the
 optimality parameter \(\lambda\), which represents how optimally the
 agent acts with respect to the total utility. We put uninformative prior
@@ -545,6 +508,17 @@ iterations, discarding the first 50,000 for burnin. The Maximum A-
 Posteriori estimate and 95\% HDI Interval for \(\lambda\) was 4.79
 {[}3.96, 6.2{]}.
 
+\begin{CodeChunk}
+\begin{figure}[H]
+
+{\centering \includegraphics[width=0.97\linewidth]{figs/e2_results-1} 
+
+}
+
+\caption[Behavioral and model results for Exp]{Behavioral and model results for Exp. 2. A: Action decisions from human data (top) and fitted model predictions (bottom). Color represents social context. B and C: Decision times and belief change respectively, collapsing across social contexts. D: Inferred phi values for each condition. All other plotting conventions are the same as Fig. 3.}\label{fig:e2_results}
+\end{figure}
+\end{CodeChunk}
+
 The fitted model predictions of action choices are shown in
 Fig.~\ref{fig:e2_results}A (bottom). The model's expected posteriors
 over action choices capture key differences between conditions: the
@@ -553,8 +527,7 @@ overall, but not when the performance goal was highlighted. The model
 was able to predict the distribution of action responses with high
 accuracy \(r^2(21)\) = 0.9.
 
-\hypertarget{general-discussion}{%
-\section{General Discussion}\label{general-discussion}}
+\section{General Discussion}\label{general-discussion}
 
 How do social contexts shape active learning? We proposed that people
 integrate informational and social goals when deciding what to do. In
@@ -578,20 +551,19 @@ informational and social goals.
 
 There are limitations to this research that present opportunities for
 future work. First, we did not differentiate between performance and
-presentation goals, since the choice of performing both actions
-satisfies each of these goals in our task. Enriching the space of
-possible actions could tease apart actions driven by self-presentation,
-especially when the optimal action for demonstrating your competence may
-be different from the action to produce immediately rewarding outcomes.
-Second, we used a particular social context (the presence of a boss) to
-emphasize presentational goals. Our model can be extended to explain a
-richer set of social considerations, such as other kinds of observers
-such as a teacher who wants the learner to select actions that
-facilitate learning. Third, we limited people to a single action choice.
-While this allowed for a clean measurement of differecnes across
-conditions, real-world learning often involves sequential
-decision-making (Ho, Littman, MacGlashan, Cushman, \& Austerweil, 2016;
-Rafferty, Brunskill, Griffiths, \& Shafto, 2011) that could cause
+presentation goals, as the choice of performing both actions satisfies
+both of these goals in our task. Enriching the space of possible actions
+could tease apart actions driven by self-presentation, especially when
+the optimal action for demonstrating one's competence may be different
+from the action for immediately rewarding outcomes. Second, we used a
+particular social context (the presence of a boss) to emphasize
+presentational goals. Our model can be extended to explain a richer set
+of social considerations, such as other kinds of observers (e.g., a
+teacher who wants the learner to select actions that facilitate
+learning). Third, we limited people to a single action choice. While
+this allowed for a clean measurement of differences across conditions,
+real-world learning often involves sequential decision-making (e.g., Ho,
+Littman, MacGlashan, Cushman, \& Austerweil, 2016) that could cause
 learners to prioritize different goals depending on their prior actions
 or the probability of interacting with an observer in the future.
 
@@ -609,89 +581,80 @@ ultimately seek to unify theories on active learning and social
 reasoning.
 
 \vspace{1em}
-
 \fbox{\parbox[b][][c]{7.3cm}{\centering All experiments, data, model, and analysis codes are available in the public repository for the project: \url{https://github.com/kemacdonald/soc-info}}}
 \vspace{1em} \noindent
 
-\hypertarget{acknowledgements}{%
-\section{Acknowledgements}\label{acknowledgements}}
+\section{Acknowledgements}\label{acknowledgements}
 
 This work was supported by an NSERC postgraduate doctoral scholarship to
 EJY, NSF GRFPs to KM and MA, a Jacobs Foundation Fellowship to MCF, and
 NSF \#1456077.
 
-\hypertarget{references}{%
-\section{References}\label{references}}
+\section{References}\label{references}
 
-\setlength{\parindent}{-0.1in} 
-\setlength{\leftskip}{0.125in}
+\setlength{\parindent}{-0.1in} \setlength{\leftskip}{0.125in}
 
 \noindent
 
 \hypertarget{refs}{}
-\leavevmode\hypertarget{ref-castro2009human}{}%
+\hypertarget{ref-castro2009human}{}
 Castro, R. M., Kalish, C., Nowak, R., Qian, R., Rogers, T., \& Zhu, X.
 (2009). Human active learning. In \emph{Advances in neural information
 processing systems} (pp. 241--248).
 
-\leavevmode\hypertarget{ref-frank2013throwing}{}%
+\hypertarget{ref-frank2013throwing}{}
 Frank, M. C. (2013). Throwing out the bayesian baby with the optimal
 bathwater: Response to endress (2013). \emph{Cognition}, \emph{128}(3),
 417--423.
 
-\leavevmode\hypertarget{ref-goodman2016}{}%
+\hypertarget{ref-goodman2016}{}
 Goodman, N. D., \& Frank, M. C. (2016). Pragmatic language
 interpretation as probabilistic inference. \emph{Trends in Cognitive
 Sciences}, \emph{20}(11), 818--829.
 
-\leavevmode\hypertarget{ref-grabinger1995rich}{}%
+\hypertarget{ref-grabinger1995rich}{}
 Grabinger, R. S., \& Dunlap, J. C. (1995). Rich environments for active
 learning: A definition. \emph{ALT-J}, \emph{3}(2), 5--34.
 
-\leavevmode\hypertarget{ref-ho2016showing}{}%
+\hypertarget{ref-ho2016showing}{}
 Ho, M. K., Littman, M., MacGlashan, J., Cushman, F., \& Austerweil, J.
 L. (2016). Showing versus doing: Teaching by demonstration. In
 \emph{Advances in neural information processing systems} (pp.
 3027--3035).
 
-\leavevmode\hypertarget{ref-jara2016}{}%
+\hypertarget{ref-jara2016}{}
 Jara-Ettinger, J., Gweon, H., Schulz, L. E., \& Tenenbaum, J. B. (2016).
 The naïve utility calculus: Computational principles underlying
 commonsense psychology. \emph{Trends in Cognitive Sciences},
 \emph{20}(8), 589--604.
 
-\leavevmode\hypertarget{ref-lee2014bayesian}{}%
+\hypertarget{ref-lee2014bayesian}{}
 Lee, M. D., \& Wagenmakers, E.-J. (2014). \emph{Bayesian cognitive
 modeling: A practical course}. Cambridge university press.
 
-\leavevmode\hypertarget{ref-mackay2003}{}%
+\hypertarget{ref-mackay2003}{}
 MacKay, D. J. (2003). \emph{Information theory, inference and learning
 algorithms}. Cambridge university press.
 
-\leavevmode\hypertarget{ref-nelson2005}{}%
+\hypertarget{ref-nelson2005}{}
 Nelson, J. D. (2005). Finding useful questions: On bayesian
 diagnosticity, probability, impact, and information gain.
 \emph{Psychological Review}, \emph{112}(4).
 
-\leavevmode\hypertarget{ref-rafferty2011faster}{}%
-Rafferty, A. N., Brunskill, E., Griffiths, T. L., \& Shafto, P. (2011).
-Faster teaching by pomdp planning. In \emph{International conference on
-artificial intelligence in education} (pp. 280--287). Springer.
-
-\leavevmode\hypertarget{ref-shafto2012learning}{}%
+\hypertarget{ref-shafto2012learning}{}
 Shafto, P., Goodman, N. D., \& Frank, M. C. (2012). Learning from
 others: The consequences of psychological reasoning for human learning.
 \emph{Perspectives on Psychological Science}, \emph{7}(4), 341--351.
 
-\leavevmode\hypertarget{ref-sutton1998}{}%
+\hypertarget{ref-sutton1998}{}
 Sutton, R. S., \& Barto, A. G. (1998). \emph{Introduction to
 reinforcement learning} (Vol. 135). MIT Press Cambridge.
 
-\leavevmode\hypertarget{ref-xu2007}{}%
+\hypertarget{ref-xu2007}{}
 Xu, F., \& Tenenbaum, J. B. (2007). Word learning as bayesian inference.
 \emph{Psychological Review}, \emph{114}(2), 245.
 
-\leavevmode\hypertarget{ref-yoon2017}{}%
+\hypertarget{ref-yoon2017}{}
 Yoon, E. J., Tessler, M. H., Goodman, N. D., \& Frank, M. C. (2017). ``I
 won't lie, it wasn't amazing'': Modeling polite indirect speech. In
 \emph{Proceedings of the thirty-ninth annual conference of the Cognitive
