--- a/R/01b_data_processing_prior.Rmd
+++ b/R/01b_data_processing_prior.Rmd
@@ -8,65 +8,25 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r}
-library(lubridate); library(magrittr); library(jsonlite); 
-library(tidyverse); library(here)
-```
-
-```{r}
+source(here::here("R/soc_info_helpers.R"))
 d_path <- "data/01_raw_data/actions_prior/production-results/"
 ```
 
 ## Load raw json data
 
-Write a function that reads the raw json, extacts the information we care about, and builds a tidy data frame. Note that this function is specific to the prior elicitation task, which stores fewer variables.
-
-```{r}
-json_to_df_prior <- function(data_path, file) {
-  d <- read_json(path = here(data_path, file))
-  tibble(
-    workerid = d$WorkerId, 
-    condition = d$answers$goal_condition,
-    action_response = d$answers$action_response,
-    browser = d$answers$browser,
-    browser_width = d$answers$browser_width,
-    browser_height = d$answers$browser_height,
-    screen_width = d$answers$screen_width,
-    screen_height = d$answers$screen_height,
-    mobile_device = d$answers$mobile_device,
-    about = d$answers$about,
-    why_action = d$answers$why_action,
-    age = d$answers$age,
-    gender = d$answers$gender,
-    first_language = d$answers$language
-  )
-}
-```
-
-
-Use purrr's safely function to catch any errors.
-
-```{r}
-safe_json_to_df <- safely(json_to_df_prior)
-```
-
 Use purrr to map our read json function over all files in the raw data directory
 
 ```{r}
 files <- dir(here(d_path))
-df_list <- files %>% purrr::map(~ safe_json_to_df(data_path = d_path, .)) 
+df_list <- files %>% purrr::map(~ safe_json_to_df_prior(data_path = d_path, .)) 
 ```
 
-Look at output to see where errors occurred.
+Look at output to see where errors occurred and then convert to data frame only keeping successful function calls.
 
 ```{r}
 results <- df_list %>% transpose() 
 ok <- results$error %>% map_lgl(is_null)
-```
-
-Convert to data frame only keeping succssful function calls.
-
-```{r}
-df <- results$result %>% keep(ok) %>%  map_df(bind_rows)
+df <- results$result %>% keep(ok) %>%  map_df(bind_rows) 
 ```
 
 ## Data checks
